# mcp-awareness

./: .dockerignore  .env.oauth.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  alembic.ini  docker-compose.demo.yaml  docker-compose.oauth.yaml  docker-compose.qa.yaml  docker-compose.yaml  docker-entrypoint.sh  install-demo.sh  install.sh  pyproject.toml  seed-demo.sql  seed_demo.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml  platform_test_report.yml
.github/workflows/: ci.yml  docker-publish.yml  pr-labels-ci.yml  pr-labels.yml  qa-gate.yml
alembic/: env.py
alembic/versions/: 9184f91831f8_add_pgvector_extension.py  a0f1c4855eb2_initial_schema.py  c3a7f2d91e4b_add_reads_and_actions_tables.py  d5e8a3b17f92_add_embeddings_table.py  e7b2c4a91d35_fix_logical_key_unique_index.py  f1a2b3c4d5e6_add_owner_id_and_users.py  g2b3c4d5e6f7_add_rls_policies.py  h3c4d5e6f7g8_entries_updated_nullable.py  i4d5e6f7g8h9_add_oauth_columns.py  j5e6f7g8h9i0_force_rls.py  k6f7g8h9i0j1_add_language_and_tsv.py  l7g8h9i0j1k2_backfill_entry_language.py  m8h9i0j1k2l3_add_system_user_for_schemas.py  n9i0j1k2l3m4_rls_allow_system_schema_reads.py
benchmarks/: baseline-layer1-20260413.json  baseline-layer1-nomic-20260413.json  semantic_search_bench.py
docs/: auth-setup.md  case-studies.md  cla.md  collation-layer.md  data-dictionary.md  deployment-guide.md  from-metrics-to-mental-models.md  language-guide.md  memory-prompts.md  poc-demo.md  schema-record-guide.md  vision.md
docs/design/: hybrid-retrieval-multilingual.md
docs/maintenance/holodeck/: update-mcp-awareness.md
docs/superpowers/plans/: 2026-03-30-high-findings-fixes.md  2026-03-30-pr-label-state-machine.md  2026-04-01-gzip-pagination.md  2026-04-01-holodeck-deployment.md  2026-04-02-oauth-proxy-workaround.md  2026-04-02-zero-downtime-deployment.md  2026-04-13-schema-record-entry-types-plan.md
docs/superpowers/specs/: 2026-03-30-high-findings-fixes-design.md  2026-03-30-pr-label-state-machine-design.md  2026-04-01-gzip-pagination-design.md  2026-04-01-holodeck-deployment-design.md  2026-04-02-oauth-proxy-workaround-design.md  2026-04-02-zero-downtime-deployment-design.md  2026-04-07-session-persistence-design.md  2026-04-10-trim-write-tool-responses-design.md  2026-04-13-schema-record-entry-types-design.md
examples/: migrate_sqlite_to_postgres.py  simulate_edge.py  test_new_tools.py
scripts/: backfill_language.py  benchmark_layer1.py  generate-pngs.sh
scripts/holodeck/: create-app-ct.sh  create-ct200.sh  deploy.sh
src/mcp_awareness/: __init__.py  __main__.py  cli.py  cli_register_schema.py  collator.py  embeddings.py  helpers.py  instructions.md  language.py  middleware.py  migrate.py  oauth.py  oauth_proxy.py  postgres_store.py  prompts.py  resources.py  schema.py  server.py  session_registry.py  store.py  tools.py  validation.py
src/mcp_awareness/sql/: cleanup_expired.sql  clear_actions.sql  clear_embeddings.sql  clear_entries.sql  clear_reads.sql  count_active_suppressions.sql  count_records_referencing.sql  create_tables.sql  create_user_auto.sql  disable_row_security.sql  find_schema.sql  get_actions.sql  get_activity.sql  get_all_active_alerts.sql  get_all_active_suppressions.sql  get_all_patterns.sql  get_all_statuses.sql  get_cleanup_opted_in_owners.sql  get_deleted.sql  get_entries_by_ids.sql  get_entries_without_embeddings.sql  get_latest_status.sql  get_read_counts.sql  get_reads.sql  get_referencing_entries.sql  get_sources.sql  get_stale_embeddings.sql  get_stats_counts.sql  get_stats_sources.sql  get_tags.sql  get_unread.sql  get_user.sql  get_user_by_oauth.sql  insert_entry.sql  link_oauth_identity.sql  list_records_referencing_ids.sql  log_action.sql  log_read.sql  query_entries.sql  restore_by_id.sql  (+28 more)
tests/: __init__.py  conftest.py  test_cli.py  test_cli_register_schema.py  test_collator.py  test_embeddings.py  test_helpers.py  test_integration.py  test_language.py  test_middleware.py  test_oauth.py  test_oauth_proxy.py  test_rls.py  test_schema.py  test_server.py  test_session_registry.py  test_store.py  test_tools_schema_record.py  test_validation.py
