[project]
name = "mcp-awareness-server"
version = "0.12.0"
description = "Generic MCP server for ambient system awareness across monitored systems"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[project.scripts]
mcp-awareness = "mcp_awareness.server:main"
mcp-awareness-migrate = "mcp_awareness.migrate:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_awareness"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_awareness/instructions.md" = "mcp_awareness/instructions.md"
"src/mcp_awareness/favicon.ico" = "mcp_awareness/favicon.ico"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that start a real server (slow)",
]

# --- Ruff ---
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    "build",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

# --- Mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["mcp_awareness"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psycopg.*", "psycopg_pool.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*", "sqlalchemy.*"]
ignore_missing_imports = true

# The tools/resources/prompts modules use a circular import pattern
# (from . import server as _srv) to access mutable state through the server
# module at call time.  mypy cannot resolve attribute types on the partially-
# initialized module object, so we suppress has-type for these three files.
[[tool.mypy.overrides]]
module = ["mcp_awareness.tools", "mcp_awareness.resources", "mcp_awareness.prompts"]
disable_error_code = ["has-type", "untyped-decorator"]

# --- Coverage ---
[tool.coverage.run]
omit = ["src/mcp_awareness/__main__.py"]
